# parley

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  dev.ps1  todo.md
docs/: adaptive-tts-chunking-spec.md  architecture.md  assemblyai-turn-data.md  cartesia-sonic-3-integration-spec.md  conversation-mode-spec.md  conversation-voice-slice-spec.md  expressive-annotation-spec.md  formatting-config-spec.md  global-reformat-spec.md  hume-octave-2-tts-integration-spec.md  multi-speaker-spec.md  paragraph-tts-chunking-spec.md  persona-crud-spec.md  philosophy.md  secrets-storage-spec.md  soniox-stt-integration-spec.md  training-transparency-spec.md  voice-composer-formatting-spec.md  word-graph-spec.md  xai-improve-1.md  xai-speech-integration-spec.md
docs/research/: anthropic-llm-data-policy.md  audio-playback.md  google-llm-data-policy.md  hume-octave-2-tts.md  openai-llm-data-policy.md  soniox-stt-data-policy.md  speaker-identity.md  stt-providers.md  voice-agents.md  xai-tts-data-policy.md  xai-ws-protocol.md
parley-core/: Cargo.toml
parley-core/src/: chat.rs  conversation.rs  expression.rs  lib.rs  model_config.rs  persona.rs  profile.rs  speaker.rs  stt.rs
parley-core/src/tts/: chunking.rs  lookahead.rs  mod.rs  sentence.rs
parley-core/src/word_graph/: graph.rs  node.rs
proxy/: Cargo.toml
proxy/src/: conversation_api.rs  main.rs  profile.rs  providers.rs  registry.rs  secrets.rs  secrets_api.rs  session_store.rs  stt_api.rs  tts_api.rs
proxy/src/llm/: anthropic.rs  mod.rs  sse.rs  test_support.rs
proxy/src/orchestrator/: mod.rs  stt_router.rs
proxy/src/stt/: mod.rs  xai.rs
proxy/src/tts/: cache.rs  cartesia.rs  elevenlabs.rs  hub.rs  mod.rs  silence.rs  xai.rs
src/: main.rs
src/audio/: capture.rs
src/stt/: assemblyai.rs  mod.rs  soniox.rs  xai_proxy.rs
src/ui/: app.rs  app_state.rs  conversation.rs  media_player.rs  mod.rs  pcm_player.rs  pipeline.rs  root.rs  secrets.rs  server_fns.rs  settings_drawer.rs  stt_provider_picker.rs  tts_audio_sink.rs  use_voice_input.rs  voice_picker.rs
src/word_graph/: edge.rs  mod.rs
tools/: generate_silence_frame.py
xai-spike/: Cargo.toml
xai-spike/src/: main.rs
