[package]
name = "parley"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI framework — web/WASM renderer
dioxus = { version = "0.7", features = ["web"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Base64 encoding for audio payloads
base64 = "0.22"

# Futures utilities
futures-util = { version = "0.3", features = ["sink"] }

# Browser APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "AudioContext",
    "AudioContextOptions",
    "BaseAudioContext",
    "AudioDestinationNode",
    "MediaStreamAudioSourceNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "AudioBuffer",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "Event",
    "Blob",
    "BlobPropertyBag",
    "Clipboard",
    "Storage",
    "MediaStreamTrack",
    "OscillatorNode",
    "OscillatorType",
    "AudioParam",
    "AudioNode",
    "AudioScheduledSourceNode",
    "Document",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "console",
    "DisplayMediaStreamConstraints",
    "HtmlAnchorElement",
    "Url",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
