[package]
name = "parley-core"
version = "0.1.0"
edition = "2024"
description = "Shared data layer for Parley — types, word graph, persona/model configuration. WASM-compatible: no filesystem or network dependencies."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
toml = "0.8"
