[package]
name = "parley-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
parley-core = { path = "../parley-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
tokio-stream = "0.1"
tower = "0.5"
