[package]
name = "parley-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
futures = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
parley-core = { path = "../parley-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tower = "0.5"
wiremock = "0.6"
